--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ system/*
 user_guide/*
 index.php
 .htaccess
+templates_c/*.php
+system/logs/*.php
+system/cache/*.php
+*.tar
+*.bz2
+*.ppx
+dwsync.xml
